# Server

./: .gitignore  Cargo.toml  README.md  SERVER_CLI_README.md  adatp.db
core/: Cargo.toml  check_output.txt
core/src/: lib.rs
core/src/codec/: mod.rs  packet.rs  serializer.rs
core/src/crypto/: aes_gcm.rs  ed25519.rs  key_derivation.rs  mod.rs  x25519.rs
core/src/media/: audio.rs  video.rs
core/src/session/: manager.rs  mod.rs  secure_session.rs
core/src/transport/: mod.rs  tcp.rs
docs/: AdaTP.postman_collection.json  PROTOCOL_SPEC.md
server/: .env  .env.example  Cargo.toml  adatp.db  users.json
server/src/: api.rs  config.rs  db.rs  main.rs  metrics.rs
server/src/auth/: drivers.rs  factory.rs  mod.rs
tools/: install.sh  install_service.sh  setup.sh  uninstall.sh
tools/adatp-cli/: Cargo.toml
tools/adatp-cli/src/: main.rs
