[package]
name = "adatp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Protocol
adatp-core = { path = "../core" }

# Async Runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Logging & Error Handling
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
dotenvy = "0.15"

# Data & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Web Server (REST API)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database (SQLite)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# CLI & Utils
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json", "blocking"] } # Blocking for CLI ease usage
once_cell = "1.18"
dashmap = "5.5" # Concurrent Map for Metrics

[[bin]]
name = "adatp-server"
path = "src/main.rs"

[[bin]]
name = "adatp-cli"
path = "src/bin/cli.rs"
