[package]
name = "adatp-cli"
version = "2.0.0"
edition = "2021"

[dependencies]
adatp-core = { path = "../../core" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
bytes = "1.0"
serde_json = "1.0"
